# Project-Epsilon

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Epsilon  Makefile  README.md  cmake_install.cmake  makefile  meson.build
QT/: QT.pro  filedownloader.cpp  main.cpp  window.cpp  window.h
baslib/: cmd.ehd
include/: commands.hpp  flagHandler.hpp  lexer.hpp  parser.hpp  preprocessor.hpp  run.hpp
libs/python/: setup.py
libs/python/PyEpLib.egg-info/: PKG-INFO  SOURCES.txt
libs/python/tests/: test_functions.py
resources/: code.ep  header.ehd  lib.lp  libheader.ep
src/: compile.cpp  flagHandler.cpp  installer.cpp  lexer.cpp  main.cpp  meson.build  parser.cpp  preprocessor.cpp  run.cpp
src/headers/: lexer.hpp  parser.hpp
src/include/: compile.h  compile.hpp  flagHandler.hpp  lexer.h  lexer.hpp  parser.hpp  run.hpp
src/include/curl/: easy.h  header.h  options.h  typecheck-gcc.h  websockets.h
stanlib/: cmd.ehd
