cmake_minimum_required(VERSION 3.10)
project(EpsilonCodingLanguage VERSION 0.1.0 LANGUAGES CXX)
set(INCLUDEDIRECTORIES "src/include")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_PREFIX_PATH "deps/libs")
find_library(LIB_CURL curl)
link_libraries("${LIB_CURL}")
include_directories(${INCLUDEDIRECTORIES})
add_executable(epsilon src/main.cpp)
add_executable(InstallerWindows.exe src/installer.cpp)
add_executable(InstallerLinux src/installer.cpp)
add_executable(InstallerMac src/installer.cpp)